fix visibility glitch, implement inherit

--- a/src/components/LearnMode/LearnMode.css
+++ b/src/components/LearnMode/LearnMode.css
@@ -21,13 +21,7 @@
     opacity: .65;
     background-color: rgb(1,1,1);
     transition: opacity 2s;
-    visibility: visible;
-}
-
-.fade {
-    opacity: 0;
-    transition: opacity .5s ease, visibility .5s 0s;
-    visibility: hidden;
+    visibility: inherit;
 }
 
 .flashing {
@@ -44,7 +38,7 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: calc(var(--nav-height) * 1.5);
-    visibility: visible;
+    visibility: inherit;
 }
 
 .overlay-body {
@@ -59,7 +53,17 @@
     text-align: center;
     font-size: 120%;
     opacity: 1;
+    visibility: inherit;
+}
+
+.overlay-container {
     visibility: visible;
+}
+
+.fade {
+    opacity: 0;
+    transition: opacity .5s ease, visibility .5s 0s;
+    visibility: hidden;
 }
 
 @keyframes flashing {
